--- a/_c8oProject/sequences/fill_odt.yaml
+++ b/_c8oProject/sequences/fill_odt.yaml
@@ -65,12 +65,12 @@ comment: |
   required: true
 ↓output_filename [variables.RequestableVariable-1669197724594]: 
   comment: |
-    'Output DOC file name (without extension). 
-    ''.doc'' is automatically added to filename.'
+    'Output ODT file name (without extension). 
+    ''.doc'' is automatically added to filename to be opened by Ms Word or OpenOffice.'
   required: true
 ↓input_filename [variables.RequestableVariable-1669281535928]: 
   comment: |
-    Input DOC template file name to fill (without extension, '.doc' is assumed). 
+    Input ODT template file name to fill (without extension, '.doc' is automatically added but format is ODT and can be opened as a Ms Word file or OpenOffice). 
     Put your templates in <project_folder>/templates/odf
   required: true
 ↓Test_Case [core.TestCase]: 
