--- a/_c8oProject/sequences/u_fill_odt.yaml
+++ b/_c8oProject/sequences/u_fill_odt.yaml
@@ -43,9 +43,29 @@ comment: |
     	Packages.java.io.File
     );
     
-    var project_path = (''''+context.getProjectDirectory()).replace(new RegExp(/\\/g), ''/'');
-    var template_path = project_path + "/templates/odf/"+input_filename+".odt";
-    var output_path = project_path + "/outputs/"+output_filename+".odt";
+    function get_file_name(file_path){
+    	if(file_path != ""){
+    		return org.apache.commons.io.FilenameUtils.getName(get_full_path(file_path));
+    	}
+    }
+    
+    function get_full_path(file_path){
+    	if(file_path != ""){
+    		project_directory_path = context.getProjectDirectory().replace("\\", "/") + "/";
+     		if(file_path.indexOf(".//") != -1){
+      			file_path = project_directory_path + file_path.substring(3);
+    		}
+     		else if(file_path.indexOf("./") != -1){
+      			file_path = project_directory_path + "../" + file_path.substring(3);;
+    		}
+    	}
+    	return file_path;
+    }
+    
+    var template_path = get_full_path(input_filename);
+    var output_path = get_full_path(output_filename);
+    var file_name = get_file_name(output_filename);
+    log.warn("file name: " + file_name);
     
     with(odf_api){
     	
@@ -90,7 +110,7 @@ comment: |
     expression: '"attachment"'
     nodeName: type
   ↓jAttribute1 [steps.AttributeStep-1739960996684]: 
-    expression: output_filename + ".odt"
+    expression: file_name
     nodeName: name
   ↓jAttribute11 [steps.AttributeStep-1739960996687]: 
     expression: output_path
@@ -100,13 +120,17 @@ comment: |
     nodeName: content-type
 ↓output_filename [variables.RequestableVariable-1739960996705]: 
   comment: |
-    'Output ODT file name (without extension). 
-    ''.odt'' is automatically added to filename to be opened by Ms Word or LibreOffice.'
+    'ODT output file path. 
+    Can be an absolute path or a relative Convertigo path: 
+    ".//" is relative to the project''s path. 
+    "./" is relative to the workspace path.'
   required: true
 ↓input_filename [variables.RequestableVariable-1739960996708]: 
   comment: |
-    Input ODT template file name to fill (without extension, '.odt' is automatically added and it can be opened as a Ms Word file or LibreOffice). 
-    Put your templates in <project_folder>/templates/odf
+    'ODT input template file name to fill. 
+    Can be an absolute path or a relative Convertigo path: 
+    ".//" is relative to the project''s path. 
+    "./" is relative to the workspace path.'
   required: true
 ↓markers [variables.RequestableVariable-1739961089380]: 
   comment: |
@@ -122,9 +146,9 @@ comment: |
 ↓Test_Case_marker [core.TestCase]: 
   ↓output_filename [variables.TestCaseVariable-1739973840643]: 
     required: true
-    value: test
+    value: .//outputs/test.odt
   ↓input_filename [variables.TestCaseVariable-1739973840646]: 
     required: true
-    value: template
+    value: .//templates/odf/template.odt
   ↓markers [variables.TestCaseVariable-1739973840649]: 
     value: '[ { "tag": "__c8o_date", "type": "string", "value": "February 25, 2025" }, { "tag": "__c8o_objet", "type": "string", "value": "Resignation Letter" }, { "tag": "__c8o_texte", "type": "string", "value": "Dear Sir,\nDear Madam,\nDear Miss" }, { "tag": "__c8o_signature", "type": "image", "value": "C:/Convertigo/Studio 8.3.2/workspace/.metadata/.plugins/com.twinsoft.convertigo.studio/git/c8oprj-lib-odftoolkit_master/templates/sarah_signature_sample.png" } ]'
